change image descriptive text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <img src="images/mini_janus_6_tiny.png" alt="My test image">
+    <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a doll resembling me, the author">
   </body>
 </html>
