Add title, paragraph and list to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>My test page</title>
   </head>
   <body>
-    <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a doll resembling me, the author">
+    <h1>My first webpage</h1>
+    <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a
+    doll resembling me, the author">
+    <p>This webpage is my first webpage. It is made in order for me, Janus Larsen, to practice web development.
+      As of now I am learning:</p>
+      <ul>
+        <li><strong>Git</strong>, and <strong>Github</strong></li>
+        <li><strong>html</strong></li>
+        <li><strong>css</strong></li>
+      </ul>
+      <p> In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
   </body>
 </html>
