--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><strong>html</strong></li>
         <li><strong>css</strong></li>
       </ul>
-      <p> In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
+      <p>In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
+      <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen">Artstation</a>.</p>
   </body>
 </html>
