--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+
     <meta charset="utf-8">
     <title>My test page</title>
   </head>
@@ -8,14 +12,16 @@
     <h1>My first webpage</h1>
     <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a
     doll resembling me, the author">
-    <p>This webpage is my first webpage. It is made in order for me, Janus Larsen, to practice web development.
-      As of now I am learning:</p>
+    <p>This webpage is my first webpage. It is made in order for me, Janus
+      Larsen, to practice web development.</p>
+      <p>As of now I am learning:</p>
       <ul>
         <li><strong>Git</strong>, and <strong>Github</strong></li>
         <li><strong>html</strong></li>
         <li><strong>css</strong></li>
       </ul>
       <p>In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
-      <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen">Artstation</a>.</p>
+      <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen" target="_blank">
+        Artstation</a>.</p>
   </body>
 </html>
