add javascript file and link to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    
+
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 
     <meta charset="utf-8">
@@ -23,5 +23,7 @@
       <p>In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
       <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen" target="_blank">
         Artstation</a>.</p>
+        <script src="scripts/main.js"></script>
+
   </body>
 </html>
