--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <p>In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
       <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen" target="_blank">
         Artstation</a>.</p>
-        <script src="scripts/main.js"></script>
 
+      <button>Change user</button>
+      <script src="scripts/main.js"></script>
   </body>
 </html>
