--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-
-    <meta charset="utf-8">
     <title>My test page</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
   </head>
+
   <body>
-    <h1>My first webpage</h1>
-    <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a
-    doll resembling me, the author">
-    <p>This webpage is my first webpage. It is made in order for me, Janus
+
+    <div id="banner">
+      <header>
+        <div class="top-bar">
+          <span class="logo">Janus Larsen</span>
+          <nav class="top-menu">
+            <a class="menu" href="#">Home</a>
+            <a class="menu" href="#">About</a>
+            <a class="menu" href="#">Contact</a>
+          </nav>
+
+        </div>
+      </header>
+      <div class="content">
+        <h1>3D rendering as a hobby</h1>
+  <!--  <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a
+    doll resembling me, the author"> !-->
+      </div>
+    </div>
+    <div id="main" class="content">
+      <p>This webpage is my first webpage. It is made in order for me, Janus
       Larsen, to practice web development.</p>
       <p>As of now I am learning:</p>
       <ul>
@@ -23,8 +39,13 @@
       <p>In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
       <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen" target="_blank">
         Artstation</a>.</p>
-
-      <button>Change user</button>
+      </div>
+      <div class="share">
+        <a href="#">SHARE</a>
+        <a href="#">FAVORITE</a>
+        <a href="#">READ</a>
+      </div>
+  <!--    <button>Change user</button> !-->
       <script src="scripts/main.js"></script>
   </body>
 </html>
