make menu button and top header. Create bottom share buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
     </div>
     <div id="main" class="content">
+      <h2>Introduction</h2>
       <p>This webpage is my first webpage. It is made in order for me, Janus
       Larsen, to practice web development.</p>
       <p>As of now I am learning:</p>
