add summary text and portfolio button

--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
       <p>In the future I hope to build my own webpage to feature a portfolio of my 3D work.</p>
       <p>My current portfolio can be found on <a href="https://www.artstation.com/januslarsen" target="_blank">
         Artstation</a>.</p>
+        <h3>Summary</h3>
+        <p>I am a 3D generalist, living in Aalborg Denmark. I mostly work in
+        Blender, and I have a passion for texturing. I do however also enjoy
+        modelling and lighting. I have done some work on freelance basis,
+        but most of my work is just for my own creative sake.
+        Have a look at my portfolio. I hope you enjoy it.
+        </p>
       </div>
       <div class="share">
         <a href="#">SHARE</a>
         <a href="#">FAVORITE</a>
-        <a href="#">READ</a>
+        <a href="https://www.artstation.com/januslarsen">PORTFOLIO</a>
       </div>
   <!--    <button>Change user</button> !-->
       <script src="scripts/main.js"></script>
