--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
       </header>
       <div class="content">
         <h1>3D rendering as a hobby</h1>
-  <!--  <img src="images/mini_janus_6_tiny.png" alt="Image of doll: A 3D rendering of a
-    doll resembling me, the author"> !-->
       </div>
     </div>
     <div id="main" class="content">
@@ -51,7 +49,7 @@
       <div class="share">
         <a href="#">SHARE</a>
         <a href="#">FAVORITE</a>
-        <a href="https://www.artstation.com/januslarsen">PORTFOLIO</a>
+        <a href="https://www.artstation.com/januslarsen" target="_blank">PORTFOLIO</a>
       </div>
   <!--    <button>Change user</button> !-->
       <script src="scripts/main.js"></script>
